--- a/meteor/client/components/output/resultCollapse.css
+++ b/meteor/client/components/output/resultCollapse.css
@@ -12,18 +12,27 @@
     max-height: 0;
 }
 
-.result-accordion {
-    /*-webkit-transition: max-height 1s;*/
-    /*-moz-transition: max-height 1s;*/
-    /*-ms-transition: max-height 1s;*/
-    /*-o-transition: max-height 1s;*/
-    /*transition: max-height 0s;*/
-    max-height: 800px;
+@keyframes result-accordion-animation {
+    0% {
+        max-height: 0;
+    }
+    100% {
+        max-height: 800px;
+    }
+}
 
+.result-accordion {
+    -webkit-transition: max-height 1s;
+    -moz-transition: max-height 1s;
+    -ms-transition: max-height 1s;
+    -o-transition: max-height 1s;
+    transition: max-height 1s;
+    max-height: 800px;
+    animation-name: result-accordion-animation;
+    animation-duration: 1s;
 }
 
 .result-accordion.collapsed {
-    transition: max-height 1s;
     overflow: hidden;
     max-height: 0;
 }
