Added animation for groups in the output ui

--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -219,7 +219,7 @@
 <template name="outputContent">
     {{#each u in uiElements}}
         {{#with u}}
-            <div class="autoWidthListBlock collapsible">
+            <div class="autoWidthListBlock collapsible {{#if not u.show}}collapsed{{/if}}">
                 {{#if showTitle title}}
                     <div class="content-block-title">{{title}}</div>{{/if}}
                 <div class="list-block">
