--- a/meteor/client/components/output/resultCollapse.css
+++ b/meteor/client/components/output/resultCollapse.css
@@ -1,24 +1,27 @@
-.collapsible {
-    overflow: hidden;
-    /*-webkit-transition: max-height 1s;*/
-    /*-moz-transition: max-height 1s;*/
-    /*-ms-transition: max-height 1s;*/
-    /*-o-transition: max-height 1s;*/
-    transition: max-height 1s;
-    max-height: 4000px;
-}
-
-.collapsible.collapsed {
-    max-height: 0;
-}
-
-@keyframes result-accordion-animation {
+@keyframes slide-in-animation {
     0% {
         max-height: 0;
     }
     100% {
         max-height: 800px;
     }
+}
+
+.collapsible {
+    overflow: hidden;
+    -webkit-transition: max-height 1s;
+    -moz-transition: max-height 1s;
+    -ms-transition: max-height 1s;
+    -o-transition: max-height 1s;
+    transition: max-height 1s;
+    max-height: 4000px;
+    animation-name: slide-in-animation;
+    animation-duration: 1s;
+}
+
+.collapsible.collapsed {
+    overflow: hidden;
+    max-height: 0;
 }
 
 .result-accordion {
@@ -28,7 +31,7 @@
     -o-transition: max-height 1s;
     transition: max-height 1s;
     max-height: 800px;
-    animation-name: result-accordion-animation;
+    animation-name: slide-in-animation;
     animation-duration: 1s;
 }
 
