Fixed animations in output ui

--- a/meteor/client/components/output/result/result.html
+++ b/meteor/client/components/output/result/result.html
@@ -37,7 +37,7 @@
         {{#with athlete}}
             <div style="clear: both"></div>
             <div class="accordion-item-content">
-                <div class="content-block" style="padding-left: 65px;">
+                <div class="content-block">
                     {{#if certificateUpdate}}
                         <p class="t-left">
                             Die Urkunde muss neu erstellt werden, da sich die Punktzahl des Athleten geändert hat.
