--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -26,7 +26,7 @@
 
 <template name="addCode">
     <li class="button-highlight">
-        <div class="item-content">
+        <div class="item-content add-code">
             <div class="item-media">
                 <i class="f7-icons" style="margin-left: 10px;">add</i>
             </div>
