--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -31,7 +31,7 @@
                     {{#if readOnly}}
                         <p class="t-left">
                             Sportarten
-                            <a href="" class="align-right t-right button-highlight open-popup"
+                            <a href="" class="align-right t-right button-highlight open-popup show-sportTypes"
                                data-popup=".popup-sportTypes-{{_id}}">Auflistung <i class="f7-icons"
                                                                                     style="font-size: 19px; display: inline-block; vertical-align: middle; padding-left: 5px">chevron_right</i></a>
                         </p>
@@ -43,7 +43,7 @@
                         </p>
                         {{#if not active}}
                             <p>
-                                <a href="" class="item-link list-button">Wettkampf starten</a>
+                                <a href="" class="item-link list-button launch-competition">Wettkampf starten</a>
                             </p>
                         {{/if}}
                     {{else}}
