--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -1,31 +1,68 @@
 <template name="accessCodes">
-    <a href="#" class="button button-big button-fill generateCodes">Passwörter erzeugen</a>
+    <!--<a href="#" class="button button-big button-fill generateCodes">Passwörter erzeugen</a>-->
+
+    <div class="progressbar button button-big generateCodes" style="border: none;" data-progress="100">
+        <span class="t-center" style="{{#if progressDone}}color: white{{/if}}">Passwörter erzeugen</span>
+    </div>
+
     <div class="autoWidthListBlock">
+        {{> accessCodeGroup g=customCodesGroup after="addCode"}}
         {{#each g in codeGroups}}
             {{#if not (isEmpty g.codes)}}
-                <div class="content-block-title">{{g.name}}</div>
-                <div class="list-block">
-                    <ul class="container">
-                        {{#each c in (g.codes)}}
-                            <li class="result-accordion item">
-                                <div class="item-content">
-                                    {{#if c.code}}
-                                        <div class="item-media">{{> iconOK}}</div>
-                                    {{else}}
-                                        <div class="item-media">
-                                            {{> iconPreloader}}
-                                        </div>
-                                    {{/if}}
-                                    <div class="item-inner">
-                                        <div class="item-title">{{c.title}}</div>
-                                        <div class="item-after">{{c.code}}</div>
-                                    </div>
-                                </div>
-                            </li>
-                        {{/each}}
-                    </ul>
-                </div>
+                {{> accessCodeGroup g=g}}
             {{/if}}
         {{/each}}
+    </div>
+    <style>
+        .custom-progress-bar {
+            transition: all 0.45s;
+        }
+
+        .full-progress {
+            background: linear-gradient(90deg, #007aff 100%, white 100%, white);
+        }
+    </style>
+</template>
+
+<template name="addCode">
+    <li class="button-highlight">
+        <div class="item-content">
+            <div class="item-media">
+                <i class="f7-icons" style="margin-left: 10px;">add</i>
+            </div>
+            <div class="item-inner">
+                <div style="display: inline-block">
+                    <div class="item-title" style="display: inline-block; vertical-align: middle;">
+                        Eigenen Zugangscode erstellen
+                    </div>
+                </div>
+            </div>
+        </div>
+    </li>
+</template>
+
+<template name="accessCodeGroup">
+    <div class="content-block-title">{{g.name}}</div>
+    <div class="list-block">
+        <ul class="container">
+            {{#each c in (g.codes)}}
+                <li class="result-accordion item">
+                    <div class="item-content">
+                        {{#if c.code}}
+                            <div class="item-media">{{> iconOK}}</div>
+                        {{else}}
+                            <div class="item-media">
+                                {{> iconPreloader}}
+                            </div>
+                        {{/if}}
+                        <div class="item-inner">
+                            <div class="item-title">{{c.title}}</div>
+                            <div class="item-after">{{c.code}}</div>
+                        </div>
+                    </div>
+                </li>
+            {{/each}}
+            {{>Template.dynamic template=after}}
+        </ul>
     </div>
 </template>
