--- a/meteor/client/components/config/overview/competition/competition.html
+++ b/meteor/client/components/config/overview/competition/competition.html
@@ -5,12 +5,12 @@
                 <div class="item-media">
                     {{#if readOnly}}
                         {{#if active}}
-                            {{> iconOK}}
+                            {{> iconOK text="Dieser Wettkampf ist aktiv."}}
                         {{else}}
-                            {{> iconReady}}
+                            {{> iconReady text="Dieser Wettkampf ist konfiguriert jedoch nicht aktiv"}}
                         {{/if}}
                     {{else}}
-                        {{> iconWarn}}
+                        {{> iconWarn text="Die Konfiguration dieses Wettkampfes ist noch nicht abgeschlossen"}}
                     {{/if}}
                 </div>
                 <div class="item-inner">
