Hide the control arrows in input fields in input UI (closes #109)

--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -13,7 +13,7 @@
                         {{>attempt n=@index measurement=m metadata=metadata showIcon=true}}
                     {{/each}}
                     {{#if scoreWritePermission metadata}}
-                        {{>attempt n=(length measurements) measurement=empty_measurement metadata=metadata showIcon=false}}
+                        {{>attempt n=(length measurements) measurement=(empty_measurement metadata) metadata=metadata showIcon=false}}
                     {{/if}}
                 </ul>
             </div>
