--- a/meteor/client/components/input/attempt/attempt.html
+++ b/meteor/client/components/input/attempt/attempt.html
@@ -21,7 +21,7 @@
             <div class="item-inner">
                 <div class="item-title label">{{inc n}}. Versuch</div>
                 <div class="item input">
-                    <input type="{{#with metadata}}{{inputType}}{{/with}}"
+                    <input type="{{#with measurement}}{{inputType}}{{/with}}"
                            placeholder="Ergebnis in {{#with metadata}}{{unit}}{{/with}}"
                            value="{{#with measurement}}{{strValue}}{{/with}}"
                            data-attempt="{{inc n}}"
