Added functionality to ageGroup dial (resolves #115)

--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -34,7 +34,8 @@
                                     {{#with a}}
                                         <p class="t-left">
                                             Geburtsjahr:
-                                            <span class="align-right">{{ageGroup}}</span>
+                                            <input type="text" value="{{ageGroup}}"
+                                                   class="t-right align-right ageGroup"/>
                                         </p>
                                         <p class="t-left">
                                             Geschlecht:
