Added reset sorting button to output ui without functionality.

--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -49,6 +49,7 @@
                     {{/each}}
                 </ul>
             </div>
+            <div class="button-highlight sorting-reset-button">Reset</div>
         </div>
     </div>
 
