Added offline overlay to config ui (closes #123)

--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -1,4 +1,5 @@
 <template name="config">
+    {{> offline}}
     <div class="pages">
         <div data-page="index" class="page navbar-fixed toolbar-fixed">
 
