--- a/meteor/client/components/offline/offline.html
+++ b/meteor/client/components/offline/offline.html
@@ -1,31 +1,23 @@
 <template name="offline">
-    <div class="login-screen offline {{#if isOffline}}modal-in{{/if}}">
-        <div class="view">
-            <div class="page">
-                <div class="page-content login-screen-content">
-                    <div class="login-screen-title">Darn it!</div>
-                    <div class="list-block-label" style="color:#455A64; padding-left: 10%; padding-right: 10%">Wir
-                        können unsere fleißigen Gorillas nicht erreichen!
-                        <br> Bitte setze dich so bald wie möglich mit ihnen in Verbindung um diesen Teil der Seite
-                        nutzen zu können.
-                    </div>
-                    <div class="list-block">
-                        <img src="/gorilla.jpg" class="full-width">
-                    </div>
-                    <div class="list-block t-center">
-                        <div id="goToLoginButton" class="big-button" style="background-color: green">
-                            Zum Login!
-                        </div>
-                        <br>
-                        <div class="big-button" style="background-color: red"
-                             onclick="window.open('https://www.wwf.de/spenden-helfen/fuer-ein-projekt-spenden/gorillas/formular/anzeigen/spenden/eintragen/', '_blank')">
-                            Mehr Gorillas!
-                        </div>
-                    </div>
+    <div class="login-screen offline {{#if isOffline}}c{{/if}}">
+    </div>
+    <div class="popup login-screen {{#if isOffline}}modal-in{{/if}}">
+        <div class="content-block">
+            <div class="login-screen-title">Keine Verbindung!</div>
+            <br>
+            <div class="list-block-label" style="color:#455A64; padding-left: 10%; padding-right: 10%">Wir
+                können den Verwaltungsserver nicht erreichen!
+                <br> Bitte setzen sie sich so bald wie möglich mit ihnen in Verbindung um diesen Teil der Seite
+                nutzen zu können oder gehen sie zum Login, um etwas anderes zu machen.
+            </div>
+            <div class="list-block t-center">
+                <div id="goToLoginButton" class="big-button" style="background-color: green">
+                    Zum Login
                 </div>
             </div>
         </div>
     </div>
+
     <style>
         .hidden {
             visibility: hidden;
@@ -49,6 +41,11 @@
             color: #FFF;
             border-radius: 10px;
             cursor: pointer;
+        }
+
+        .offline {
+            opacity: 0.8;
+            background-color: gray;
         }
     </style>
 </template>
