Added ability to create new competitions (resolves #126)

--- a/meteor/client/components/config/overview/competitionList/competitionList.html
+++ b/meteor/client/components/config/overview/competitionList/competitionList.html
@@ -9,7 +9,7 @@
                     {{>competition competition=c}}
                 {{/each}}
                 {{#if not readOnly}}
-                    <li class="button-highlight">
+                    <li class="button-highlight open-popup" data-popup=".popup-competitionType">
                         <div class="item-content">
                             <div class="item-media">
                                 <i class="f7-icons" style="margin-left: 10px;">add</i>
