--- a/meteor/client/components/config/config.html
+++ b/meteor/client/components/config/config.html
@@ -74,6 +74,7 @@
     </div>
 
     {{>startClassesPopup}}
+    {{>competitionTypePopup}}
 
     {{#each c in competitions.readOnly}}
         {{>sportTypePopup competition=c}}
