--- a/meteor/client/components/input/attempt/attempt.html
+++ b/meteor/client/components/input/attempt/attempt.html
@@ -18,7 +18,7 @@
                     {{> iconReady text="Es können Daten eingegeben werden."}}
                 {{/if}}
             </div>
-            <div class="item-inner">
+            <div class="item-inner {{#if measurement.read_only}}tooltip{{/if}}">
                 <div class="item-title label">{{inc n}}. Versuch</div>
                 <div class="item input">
                     <input type="{{#with measurement}}{{inputType}}{{/with}}"
@@ -30,6 +30,8 @@
                         {{disabledText measurement}}
                     >
                 </div>
+                {{#if measurement.read_only}}
+                    <span class="tooltiptext">Melden sie sich mit einer Station an um Werte einzutragen!</span>{{/if}}
             </div>
         </div>
     </li>
