--- a/meteor/client/components/input/switch/switch.html
+++ b/meteor/client/components/input/switch/switch.html
@@ -4,8 +4,8 @@
             <div class="item-inner">
                 <div class="item-title label" style="width: 75%">{{title}}</div>
                 <div class="item-input" style="text-align: right">
-                    <label class="label-switch">
-                        <input type="checkbox" data-id="{{id}}" checked="{{getState id}}" class="setting-checkbox">
+                    <label data-id="{{id}}" class="label-switch setting-checkbox">
+                        <input type="checkbox" checked="{{getState id}}">
                         <div class="checkbox"></div>
                     </label>
                 </div>
