--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -52,6 +52,8 @@
                                             </p>
                                         {{/if}}
                                     </div>
+                                    {{#if not readOnly}}<span class="align-right remove-athlete"><i class="f7-icons"
+                                                                                                    style="font-size: 14px; padding-right: 5px;">close_round</i></span>{{/if}}
                                 </div>
                             </a>
                             <div class="accordion-item-content">
