--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -13,7 +13,7 @@
                 </div>
             </div>
             <div class="list-block accordion-list">
-                <ul>
+                <ul id="athlete-list-{{g.id}}">
                     {{#each a in g.athletes}}
                         <li class="accordion-item bg-color-transition"
                             style="{{#if g.collapsed}}background-color: #ECEFF1{{/if}}"
@@ -52,8 +52,9 @@
                                             </p>
                                         {{/if}}
                                     </div>
-                                    {{#if not readOnly}}<span class="align-right remove-athlete"><i class="f7-icons"
-                                                                                                    style="font-size: 14px; padding-right: 5px;">close_round</i></span>{{/if}}
+                                    {{#if not readOnly}}{{#if not g.collapsed}}
+                                        <span class="align-right remove-athlete"><i class="f7-icons"
+                                                                                    style="font-size: 14px; padding-right: 5px;">close_round</i></span>{{/if}}{{/if}}
                                 </div>
                             </a>
                             <div class="accordion-item-content">
