--- a/meteor/client/components/config/accessCodes/accessCodes.html
+++ b/meteor/client/components/config/accessCodes/accessCodes.html
@@ -18,6 +18,10 @@
             {{/if}}
         {{/each}}
     </div>
+
+    <div class="printcontent">
+        {{>codes_print competition_name=get_competition_name login_stations=login_stations login_groups=login_groups login_custom=login_custom}}
+    </div>
 </template>
 
 <template name="addCode">
@@ -104,5 +108,77 @@
     <div class="item-inner">
         <div class="item-title">{{c.name}}</div>
         <div class="item-after">{{c.code}}</div>
+    </div>
+</template>
+
+<template name="codes_print">
+    <div class="printcontent-content">
+        <h1 align="center">{{competition_name}}: Zugangscodes</h1>
+
+    {{#if hasData login_groups}}
+        <br />
+        <br />
+        <br />
+        <div class="print-password-title">Gruppenlogins</div>
+        <br />
+        <table class="print-password-table">
+            <tr class="print-block-header">
+                <th><p class="print-name-subtitle" align="left">Zugang</p></th>
+                <th><p class="print-password-subtitle" align="right">Passwort</p></th>
+            </tr>
+            {{#each l in login_groups}}
+                <tr class="print-block-content">
+                    <td class="print-name-field">{{#with l}}{{#with account}}{{name}}{{/with}}{{/with}}</td>
+                    <td class="print-password-field">{{#with l}}{{code}}{{/with}}</td>
+                </tr>
+            {{/each}}
+        </table>
+    {{/if}}
+
+        {{#if hasData login_stations}}
+            <br />
+            <br />
+            <br />
+            <div class="print-password-title">Stationslogins</div>
+            <br />
+            <table class="print-password-table full-width">
+                <tbody>
+                <tr class="print-block-header">
+                    <th><p class="print-name-subtitle" align="left">Zugang</p></th>
+                    <th><p class="print-password-subtitle" align="right">Passwort</p></th>
+                </tr>
+                {{#each l in login_stations}}
+                    <tr class="print-block-content">
+                        <td class="print-name-field">{{#with l}}{{#with account}}{{name}}{{/with}}{{/with}}</td>
+                        <td class="print-password-field">{{#with l}}{{code}}{{/with}}</td>
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        {{/if}}
+
+        {{#if hasData login_custom}}
+            <br />
+            <br />
+            <br />
+            <div class="print-password-title">Eigene logins</div>
+            <br />
+            <table class="print-password-table">
+                <tbody>
+                <tr class="print-block-header">
+                    <th><p class="print-name-subtitle" align="left">Zugang</p></th>
+                    <th><p class="print-password-subtitle" align="right">Passwort</p></th>
+                </tr>
+                {{#each l in login_custom}}
+                    <tr class="print-block-content">
+                        <td class="print-name-field">{{#with l}}{{#with account}}{{name}}{{/with}}{{/with}}</td>
+                        <td class="print-password-field">{{#with l}}{{code}}{{/with}}</td>
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        {{/if}}
+
+
     </div>
 </template>
