--- a/meteor/client/components/offline/offline.html
+++ b/meteor/client/components/offline/offline.html
@@ -7,8 +7,8 @@
             <br>
             <div class="list-block-label" style="color:#455A64; padding-left: 10%; padding-right: 10%">Wir
                 können den Verwaltungsserver nicht erreichen!
-                <br> Bitte setzen sie sich so bald wie möglich mit ihnen in Verbindung um diesen Teil der Seite
-                nutzen zu können oder gehen sie zum Login, um etwas anderes zu machen.
+                <br> Bitte setzen sie sich so bald wie möglich mit ihrem Systemadministrator in Verbindung um diesen Teil der Seite wieder
+                nutzen zu können oder gehen sie zum Login, um dieses gerät zur Datenein/ausgabe zu nutzen.
             </div>
             <div class="list-block t-center">
                 <div id="goToLoginButton" class="big-button" style="background-color: green">
