--- a/meteor/client/components/config/accessCodes/accessCodes.css
+++ b/meteor/client/components/config/accessCodes/accessCodes.css
@@ -17,24 +17,25 @@
     }
 
     .printcontent * {
-        visibility: visible;
+        visibility: visible !important;
     }
-}
+
     .printcontent {
-        position: absolute;
+        position: absolute !important;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         width: 710px;
-        height: 100%;
+        height: 100% !important;
+        overflow: auto !important;
     }
 
     .printcontent-content {
         margin-top: 0;
         margin-left: 0;
         margin-right: 0;
-        height: 100%;
+        height: 100% !important;
     }
 
     .print-password-title {
@@ -84,4 +85,4 @@
         padding-right: 15pt;
         line-height: 45pt;
     }
-
+}
