--- a/meteor/client/styles/generic.css
+++ b/meteor/client/styles/generic.css
@@ -57,16 +57,19 @@ html, html * {
 }
 
 .fade {
-    -webkit-transition: opacity 1000ms ease;
-    -moz-transition: opacity 1000ms ease;
-    -o-transition: opacity 1000ms ease;
-    -ms-transition: opacity 1000ms ease;
-    transition: opacity 1000ms ease;
+    -webkit-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    -moz-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    -o-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    -ms-transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    transition: visibility 0s linear 0.5s, opacity 0.5s ease-in-out;
+    visibility: hidden;
     opacity: 0;
 }
 
 .fade-in {
     opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
 }
 
 #__blaze-root{
