--- a/meteor/client/components/config/athleteList/athleteList.html
+++ b/meteor/client/components/config/athleteList/athleteList.html
@@ -2,15 +2,13 @@
     <div class="autoWidthListBlock">
         {{#each g in groups}}
             <div class="content-block-title collapsible collapse-height-100 {{#if g.collapsed}}collapsed{{/if}}"
-                 style="position: relative">
+                 style="position: relative" data-gid="{{g.id}}">
                 {{g.name}}
-                <i class="fa fa-pencil rename-group" aria-hidden="true" style="cursor: pointer; padding-left:5px"
-                   data-gid="{{g.id}}"></i>
-                <i class="fa fa-remove remove-group" aria-hidden="true" style="cursor: pointer; padding-left:5px"
-                   data-gid="{{g.id}}"></i>
+                <i class="fa fa-pencil rename-group" aria-hidden="true" style="cursor: pointer; padding-left:5px"></i>
+                <i class="fa fa-remove remove-group" aria-hidden="true" style="cursor: pointer; padding-left:5px"></i>
                 <div class="align-right fade {{#if not (isEmpty g.athletes)}}fade-in{{/if}}"
                      style="position: absolute; bottom: 0; right: 0; cursor: pointer;">
-                    <i class="f7-icons collapse-group" style="font-size: 14px;" data-gid="{{g.id}}">chevron_up</i>
+                    <i class="f7-icons collapse-group" style="font-size: 14px;">chevron_up</i>
                 </div>
             </div>
             <div class="list-block accordion-list">
