Added ability to pass data context to popup

--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -8,7 +8,7 @@
                 <h5 class="t-center">{{subtitle}}</h5>
             </div>
             <div style="height: 85%; overflow-y: auto;">
-                {{>Template.dynamic template=content}}
+                {{>Template.dynamic template=content data=data}}
             </div>
         </div>
     </div>
