--- a/meteor/client/components/login/choices/choices.html
+++ b/meteor/client/components/login/choices/choices.html
@@ -26,7 +26,7 @@
                     </div>
                 </td>
                 <td style="padding-left: 20px;">
-                    <div data-popup=".popup-datanschutz" class="open-popup t-center">
+                    <div data-popup=".popup-datenschutz" class="open-popup t-center">
                         Datenschutzerklärung
                     </div>
                 </td>
