--- a/meteor/client/components/popup.html
+++ b/meteor/client/components/popup.html
@@ -1,13 +1,13 @@
 <template name="popup">
     <div class="popup {{class}}" style="overflow: hidden;">
         <div class="content-block" style="height: 100%;">
-            <div style="height: 15%">
+            <div style="height: 15%; overflow-y: auto;">
                 <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
                                                    style="float: left;">chevron_left</i></a>
                 <h1 class="t-center">{{title}}</h1>
                 <h5 class="t-center">{{subtitle}}</h5>
             </div>
-            <div style="height: 85%; overflow-y: auto;">
+            <div style="height: calc(85% - 35px); overflow-y: auto;">
                 {{>Template.dynamic template=content data=data}}
             </div>
         </div>
